public/css/elements.css
@media only screen and (max-device-width: 480px) .trick-card {
  width: 50%;
}

.trick-card {
  width: 33.33%;
}

.footer {
   width:100%;
   height:60px;   /* Height of the footer */
   position: relative;
   bottom: 0;
   background-color: white;
   z-index: 999;
   margin-top: 50px;
}

.editor { 
  height: 300px;
}

textarea {
  width: 100%;
  padding: .5rem;
  font-size: 15px;
  line-height: 1.2rem;
  resize: vertical;
  margin-bottom: 12px;

  color: #555;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
  vertical-align: middle;
  background-color: #fff;
  border: 1px solid #ccc;
  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
  -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
  -webkit-transition: border linear .2s,box-shadow linear .2s;
  -moz-transition: border linear .2s,box-shadow linear .2s;
  -o-transition: border linear .2s,box-shadow linear .2s;
  transition: border linear .2s,box-shadow linear .2s;
  overflow: auto;
}

li {
  list-style-type: none;
}

